# ucloud-alert-notifier

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  release.yml  rust-clippy.yml
src/: cli.rs  error.rs  main.rs
src/feishu/: mod.rs
src/handler/: mod.rs
